--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+    <link href="//db.onlinewebfonts.com/c/7e96eba370659b4e4563309dc4ebb33f?family=Samarkan" rel="stylesheet" type="text/css"/>
     <title>React App</title>
   </head>
   <body>
